[package]
name = "cfvm"
version = "0.1.0"
authors = ["Lyzh <enterindex@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libcfvm"
path = "./src/lib.rs"

[[bin]]
name = "cfvm"
path = "./src/main.rs"

[workspace]
resolver = '2'
members = [
  "cfir"
  ]

[workspace.package]
version = "8.0.0"
authors = ["Lyzh <enterindex@gmail.com>"]
edition = "2021"

[workspace.dependencies]
cfvm = { path="crates/cfvm" }
cfvm-cfir = { path="cfir" }


[dependencies]
emei = "^0.5.0"
lazy_static = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.5"