[package]
name = "cfvm"
version = "0.1.0"
authors = ["Lyzh <enterindex@gmail.com>"]
edition = "2021"
description = "A rewrite-driven, multi-target optimizing compiler with multi-level IR support."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libcfvm"
path = "./src/lib.rs"

[[bin]]
name = "cfvm"
path = "./src/main.rs"

[workspace]
resolver = '2'
members = [
  "common",
  "fcir",
  "fcir_frontend",
  "egraph",
  ]

[workspace.package]
version = "8.0.0"
authors = ["Lyzh <enterindex@gmail.com>"]
edition = "2021"

[workspace.dependencies]
cfvm = { path="cfvm" }
cfvm_common = { path="common" }
fcir = { path="fcir" }
fcir_frontend = { path="fcir_frontend" }
egraph = { path="egraph" }
pest = "2.7.3"
pest_derive = "2.7.3"


[dependencies]
pest.workspace = true
fcir.workspace = true
fcir_frontend.workspace = true
egraph.workspace = true