[package]
name = "cfvm"
version = "0.1.0"
authors = ["Lyzh <enterindex@gmail.com>"]
edition = "2021"
description = "A rewrite-driven, multi-target optimizing compiler with multi-level IR support."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libcfvm"
path = "./src/lib.rs"

[[bin]]
name = "cfvm"
path = "./src/main.rs"

[workspace]
resolver = '2'
members = [
  "common",
  "cfir",
  "cfir_frontend",
  "egraph",
  "cfpl",
  "backend",
  "description_lang",
  ]

[workspace.package]
version = "8.0.0"
authors = ["Lyzh <enterindex@gmail.com>"]
edition = "2021"

[workspace.dependencies]
common = { path="common" }
cfir = { path="cfir" }
cfir_frontend = { path="cfir_frontend" }
egraph = { path="egraph" }
pest = "2.7.3"
pest_derive = "2.7.3"


[dependencies]
pest.workspace = true
cfir.workspace = true
cfir_frontend.workspace = true
egraph.workspace = true